--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
           <li><a href="#services">Services</a></li>
 		  <li><a href="#testimonials">Testimonials</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-        </ul>
+		 </ul>
       </nav><!-- .navbar -->
-
+		
     </div>
-  </header><!-- End Header -->
+	  </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="hero">
@@ -74,7 +74,8 @@
           <div class="col-lg-6 text-center">
             <h2 data-aos="fade-down">Welcome to <br><span>Belfast Networks</span></h2>
             <p data-aos="fade-up">Belfast Network is a company that simplifies how you use internet and IPTV and stream services..</p>
-            <a data-aos="fade-up" data-aos-delay="200" href="https://taokininam.com/subscribers/index.php" class="btn-get-started">Client Login</a>
+            <a data-aos="fade-up" data-aos-delay="200" href="https://belfastnetworks.online/subscribers/index.php" class="btn-get-started">Client Login</a>
+			<a data-aos="fade-up" data-aos-delay="200" href="https://belfastnetworks.online/login.php" class="btn-get-started">Employee Login</a>
           </div>
         </div>
       </div>
